--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "quill": "^2.0.2",
     "vue": "2.6.10",
     "vue-axios": "^3.5.2",
     "vue-barcode": "^1.3.0",
